# SIN-Code-Grill-Me-Skill

./: .gitignore  CHANGELOG.md  README.md  SKILL.doc.md  SKILL.md  pyproject.toml
.github/workflows/: ceo-audit.yml
src/sin_grill_me/: __init__.doc.md  __init__.py  grill.doc.md  grill.py  mcp_server.doc.md  mcp_server.py
src/sin_grill_me.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sin_grill_me/cli_shims/: __init__.py  grill_next_question.py  grill_record_answer.py  grill_start.py  grill_status.py  grill_synthesize.py
tests/: test_grill.doc.md  test_grill.py
