[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-grill-me"
version = "0.2.0"
description = "Adversarial design-review interview skill for SIN-Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenSIN-Code", email = "code@opensin.ai"}
]
keywords = ["mcp", "skill", "design-review", "interview", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
# v0.2.0 — Standalone CLI shims for the 5 MCP tools. The original tools
# are async; each shim wraps the call in asyncio.run. Lets shell users
# run grilling sessions without spinning up the FastMCP server.
grill-start = "sin_grill_me.cli_shims.grill_start:main"
grill-status = "sin_grill_me.cli_shims.grill_status:main"
grill-next-question = "sin_grill_me.cli_shims.grill_next_question:main"
grill-record-answer = "sin_grill_me.cli_shims.grill_record_answer:main"
grill-synthesize = "sin_grill_me.cli_shims.grill_synthesize:main"

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Code-Grill-Me-Skill"
Repository = "https://github.com/OpenSIN-Code/SIN-Code-Grill-Me-Skill"
Issues = "https://github.com/OpenSIN-Code/SIN-Code-Grill-Me-Skill/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/sin_grill_me"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
